--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hello-world",
+  "name": "react-hello-world-component",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
